--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "css": "^3.0.0",
-        "tailwind": "^4.0.0"
+        "tailwind": "^4.0.0",
+        "tw-elements": "^1.0.0"
     }
 }
